--- a/style.css
+++ b/style.css
@@ -336,7 +336,7 @@ background-color: grey;
     margin-top: 20px;
   }
   .footer-img {
-    background-image: url('/conversational-widget-bg-web.jpeg');
+    background-image: url('./conversational-widget-bg-web.jpeg');
     background-size: 100% 100%;
     width: 100%;
     height: 560px;
